# wobot

./: .gitignore  ersp
arduino-dist/reference/: ASCIIchart.html  Abs.html  AnalogRead.html  AnalogReference.html  AnalogWrite.html  Arithmetic.html  Array.html  Assignment.html  AttachInterrupt.html  Bitshift.html  BitwiseAnd.html  BitwiseCompound.html  BitwiseXorNot.html  Boolean.html  BooleanVariables.html  Braces.html  Break.html  (+140 more)
arduino-eksperimenter/: common.mk
diverse/: flask-hierarki  installation-af-flask
ersp/: .cvsignore  Makefile  README
ersp/driver/: .cvsignore  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in~  config.status  configure  configure.ac  libtool
ersp/driver/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
ersp/driver/ersp/: Makefile  Makefile.am  Makefile.in  README  ersp.cc  ersp.cfg  ersp.h  libersp.la  libersp_la-ersp.lo
ersp/driver/ersp/.deps/: libersp_la-ersp.Plo
ersp/driver/ersp/.libs/: libersp.la  libersp.lai  libersp.so.0.0.0
ersp/driver/hdaps/: Makefile  Makefile.am  Makefile.in  README  hdaps.cc  hdaps.cfg  hdaps.h  libhdaps.la  libhdaps_la-hdaps.lo
ersp/driver/hdaps/.deps/: libhdaps_la-hdaps.Plo
ersp/driver/hdaps/.libs/: libhdaps.la  libhdaps.lai  libhdaps.so.0.0.0
ersp/driver/include/: ersp.inc  scorpion.h  scorpion.inc
ersp/driver/stage/: Makefile  Makefile.am  Makefile.in  README  libsonar2ir.la  libsonar2ir_la-sonar2ir.lo  sonar2ir.cc  sonar2ir.cfg  sonar2ir.h
ersp/driver/stage/.deps/: libsonar2ir_la-sonar2ir.Plo
ersp/driver/stage/.libs/: libsonar2ir.la  libsonar2ir.lai  libsonar2ir.so.0  libsonar2ir.so.0.0.0
example-code/: fladuino  make-all
fladuino/: README  Setup.hs  fladuino.cabal  slet_mig
fladuino/examples/: .gitignore  common.mk  tst
fladuino/examples/3pi-linefollow/: 3pi-linefollow.dump.hs  Main.hs
fladuino/examples/3pi-spiral/: Main.hs
fladuino/examples/3pitest/: Main.hs  Makefile
fladuino/examples/alarm/: Main.hs
fladuino/examples/binary/: Main.hs  Makefile1
fladuino/examples/button/: Main.hs  Makefile  Makefile1
fladuino/examples/festive/: Main.hs  Makefile  Makefile1
fladuino/examples/helloworld/: Main.hs
fladuino/examples/ports/: Main.hs
fladuino/examples/potentiometer/: Main.hs  potentiometer.dump.hs
fladuino/fladuino/: Fladuino.hs
fladuino/fladuino/Fladuino/: Device.hs  Devices.hs  Driver.hs  Exceptions.hs  Generate.hs  LiftN.hs  Monad.hs  Pololu3pi.hs  Reify.hs  Signals.hs  Util.lhs
fladuino/language/Language/C/: Pretty.hs  Quote.hs
fladuino/language/Language/C/Parser/: Exceptions.hs
fladuino/massaman/: Main.lhs  Util.lhs
fladuino/massaman/Check/: F.lhs
fladuino/massaman/Check/F/: Bindings.lhs  Check.lhs  Monad.lhs
fladuino/massaman/Check/Hs/: Check.lhs  Classes.lhs  Exceptions.lhs  Monad.lhs  Types.lhs
fladuino/massaman/Compiler/: Opt.lhs
fladuino/massaman/Control/Monad/: Ref.lhs  Trace.lhs
fladuino/massaman/Data/: Name.lhs
fladuino/massaman/Language/F/Parser/: Exceptions.lhs  Monad.lhs
fladuino/massaman/Language/Hs/: Parser.lhs  Quote.lhs  Smart.lhs  Syntax.lhs
fladuino/massaman/Language/Hs/Parser/: Exceptions.lhs  Tokens.lhs  Utils.lhs
fladuino/massaman/Transform/F/: Simplify.lhs
fladuino/massaman/Transform/F/Simplify/: Metrics.lhs  Monad.lhs  OccAnal.lhs
fladuino/massaman/Transform/Hs/: Desugar.lhs
fladuino/runtime/: Prelude.hs
fladuino/runtime/3pi/: 3pi.h  device.h  lcd.c  lcd.d  lcd.h
fladuino/runtime/common/: Flask.h  PCINT.h  event_dispatch.h  fassert.h  timersupport.h
fladuino/syntax/Data/: Loc.hs
fladuino/syntax/Data/Loc/: Pretty.hs
fladuino/syntax/Data/String/: Quote.hs
flask/: flask.cabal
flask/examples/flaskdb/: flaskdb.cabal
forsvar/: .gitignore
kode/: README  flask.cabal
kode/examples/: .gitignore  common.mk
kode/examples/festive/: Main.hs  Makefile2
kode/examples/flaskdb/: LICENSE
kode/examples/flaskdb/lib/: Prelude.hs
kode/examples/flaskdb/src/: Main.hs  Sql.hs
kode/examples/helloworld/: Main.hs  Makefile1  Makefile2
kode/examples/potentiometer/: Main.hs
kode/examples/temp-query/: Makefile.mig  Query.h  randgrid_20.mps
kode/flask/Control/Monad/: NesCGen.hs
kode/flask/Flask/: Device.hs  Driver.hs  Exceptions.hs  Generate.hs  LiftN.hs  Monad.hs  Reify.hs  Signals.hs
kode/language-nesc/Language/C/: Pretty.hs  Syntax.hs
kode/language-nesc/Language/C/Parser/: Monad.hs  Parser.y  Tokens.hs
kode/language-nesc/Language/NesC/: Pretty.hs  Quote.hs
kode/language/Language/C/: Parser.hs  Properties.hs
kode/language/Language/C/Parser/: Lexer.x
kode/language/Language/NesC/: Parser.hs  Properties.hs  Syntax.hs
kode/language/Language/NesC/Parser/: Exceptions.hs  Lexer.x  Monad.hs
kode/massaman/: Compiler.lhs  Driver.lhs  Match.lhs
kode/massaman/Check/: Hs.lhs
kode/massaman/Check/Hs/: Bindings.lhs  Builtin.lhs  Check.lhs-boot  Monad.lhs
kode/massaman/Control/Monad/: CGen.lhs
kode/massaman/Data/: Digraph.lhs
kode/massaman/Eval/: F.lhs
kode/massaman/Language/: F.lhs  Hs.lhs
kode/massaman/Language/F/: Parser.lhs
kode/massaman/Language/F/Parser/: Lexer.lx  Parser.ly  Tokens.lhs
kode/massaman/Language/Hs/: Pretty.lhs
kode/massaman/Transform/F/: ToC.lhs
kode/massaman/Transform/F/Simplify/: Lower.lhs
kode/runtime/Flow/: FlowC.nc  FlowDebug.nc  FlowDebugPrinter.nc  FlowInterestM.nc  FlowM.nc  FlowVizSeqno.nc  FlowVizSeqnoC.nc  FlowVizSnoop.h  FlowVizSnoopC.nc  FlowVizSnoopM.nc  TODO
kode/runtime/InstrumentedComm/: InstrumentedComm.h  InstrumentedComm.nc  InstrumentedGenericComm.nc
kode/runtime/MultiHopLQI/: LQIMultiHopRouter.nc
kode/runtime/common/: BufferedComm.nc  BufferedSendM.nc  Flask.h  NeighborTableM.nc  NetTime.nc  PacketTimestamp.nc  PoolM.nc  Queue.nc  QueueM.nc  QueuedSend.h  TimerSupport.h  event_dispatch.h  metric.h  timersupport.h
kode/syntax/Control/Monad/: Exception.hs
kode/syntax/Data/: IString.hs
kode/syntax/Data/String/: Quote.hs
kode/syntax/Text/PrettyPrint/: Mainland.hs
rapport/: .gitignore  flask-design.dot  flask-simple.dot  graphviz-compile.sh  rapport.bib  rapport.tex
referater/: møde-090219.txt
(+281 files in other folders)
