Name:		flaskdb
Version:	0.1
Cabal-Version:  >= 1.2
License:	BSD3
License-File:	LICENSE
Copyright:	(c) 2006-2008 Harvard University
Author:		Geoffrey Mainland <mainland@eecs.harvard.edu>
Maintainer:	mainland@eecs.harvard.edu
Stability:	alpha
Homepage:	http://www.eecs.harvard.edu/~mainland/flask
Category:	Development tool
Synopsis:	FlaskDB compiler

Build-type:	Simple

Executable flaskdb
  Build-Depends:	base>=4, parsec, flask
  Hs-source-dirs:	src
  Main-is: 		Main.hs
